@@ -5,6 +5,9 @@ netcfg (1.60) UNRELEASED; urgency=low
     DHCP configuration when a link is slow to become available.
     Thanks to Ferenc Wagner for the patch.
   * Clarify the requirements for hostnames.  Closes: #399071.
+  * Modify ethtool-lite so that it distinguishes between "ethtool failed"
+    and "ethtool says link is down".  This should reduce link up/link down
+    confusion.  Closes: #496647.
 
  -- Matt Palmer <mpalmer@debian.org>  Fri, 21 Jan 2011 12:44:21 +1100
 
